[package]
name = "qbittorrent-mv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
ssh2 = "0.8.3"
tokio = { version = "1.47.0", features = ["full"] }
walkdir = "2.5.0"