[package]
name = "qbittorrent-mv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.41", features = ["derive"] }
log = "0.4.27"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simple_logger = "5.0.0"
ssh2 = "0.8.3"
tokio = { version = "1.47.0", features = ["full"] }
walkdir = "2.5.0"
